[tool.poetry]
name = "github-hooks-server"
version = "1.0.0"
description = "Custom handling of GitHub Hooks for Chevah Project."
authors = ["Adi Roiban <adi.roiban@chevah.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
"github3.py" = "^3.0.0"
azure-functions = "^1.7.2"
azure-functions-worker = "^1.1.9"
Twisted = "^21.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
